DT-1803  Fix input design on iOS Safari

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -452,6 +452,8 @@ textarea,
 	-moz-transition: border .2s;
 	-ms-transition: border .2s;
 	transition: border .2s;
+    border-radius: 0;
+    -webkit-appearance: none;
 	&:hover, &:focus {
 		border: 1px solid darken(@color-swatch1, 20%);
 	}
